Fix hover menu alignment issue

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,6 +5,7 @@ body {
 
 .container {
     margin: 80px 0 0 0;
+    overflow-x: hidden;
 }
 
 header {
@@ -39,14 +40,19 @@ nav ul {
 }
   
 nav ul li {
+    font-size: 1.3em;
     display: inline-block;
     padding: .25em .8em;
+}
+
+.dropdown#hover li,
+.dropdown#mobile li {
+    font-size: .8em;
 }
 
 nav ul li a,
 .dropdown#hover,
 .dropdown#mobile {
-    font-size: 1.3em;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
 }
@@ -74,16 +80,6 @@ h1 {
     display: none;
 }
 
-.dropdown#li {
-    display: block;
-    transition-duration: 0.5s;
-    font-size: .6em;
-    padding: .4em 1.9em;
-    text-align: center;
-    clear: both;
-    cursor: default;
-  }
-
 .dropdown#hover {
     cursor: pointer;
   }
@@ -109,10 +105,43 @@ h1 {
     display: block;
     transition: all .2s ease-out .1s;
     background: #782f40e6;
-    margin-top: 1.3em;
+    margin-top: 1.7em;
   }
 
-  
+  .dropdown li {
+    display: block;
+    transition-duration: 0.5s;
+    padding: .4em 1.7em;
+    text-align: center;
+    clear: both;
+    cursor: default;
+  }
+
+  .dropdown#events,
+  .dropdown#events:hover {
+      transform: translateX(-1.4em);
+  }
+
+  .dropdown#resources,
+  .dropdown#resources:hover {
+      transform: translateX(-0.8em);
+  }
+
+  .dropdown#leadership,
+  .dropdown#leadership:hover {
+      transform: translateX(0.3em);
+  }
+
+  .dropdown#affiliates,
+  .dropdown#affiliates:hover {
+      transform: translateX(-1.7em);
+  }
+
+  .dropdown#about,
+  .dropdown#about:hover {
+      transform: translateX(-1.2em);
+  }
+
 .logo,
 .fsu,
 .fsu_hide {
@@ -144,6 +173,7 @@ h1 {
 
 .hero {
     background-color: #ead5b2;
+    position: relative;
 }
 
 .mobile_logo {
@@ -409,7 +439,7 @@ footer a i:hover {
 
 @media(max-width: 1100px) {
 
-    .fsu, .fsu_hide {
+    .fsu, .fsu_hide, .to_content {
         display: none;
     }
 
@@ -469,12 +499,10 @@ footer a i:hover {
     .menu_show li {
         display: block;
         line-height: 5em;
-        font-size: 1.3em;
         z-index: inherit;
     }
 
     .menu_show p {
-        font-size: 1.3em;
         line-height: unset;
         display: inline;
     }
